@@ -1,4 +1,5 @@
 ﻿+++ version 0.12.0-beta1
+* tabs: 'close all tabs but active one' action added (Juzef)
 
 +++ version 0.12.0-alpha4
 * sql_history: #2484 done: removed uuids from history file, now history can be moved between instances (Vogel)
